Order Lists alphabetically by name
* Corrected Typo

--- a/SBOMViewer.Blazor/Components/SpdxViewer.razor
+++ b/SBOMViewer.Blazor/Components/SpdxViewer.razor
@@ -1,4 +1,4 @@
-﻿@using System.Text.Json
+@using System.Text.Json
 @using System.Text.Json.Serialization
 @using SBOMViewer.Blazor.Models.Spdx
 
@@ -156,4 +156,5 @@
             </Collapse>
         </CardBody>
     </Card>
-}}}
+}
+
